--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-student.firstName=Sai Srivathsa
-student.lastName=Muthyala
-
-address.street=Malakpet Colony
-address.city=Hyderabad
-address.zip=500036
+spring.datasource.url=jdbc:mysql://localhost:3306/student_list?useSSL=false&serverTimezone=UTC
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
